--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,9 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.0.14",
+    "morgan": "^1.10.1",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
